plugins {
    id 'eclipse'
    id 'net.neoforged.moddev' version '2.0.78'
}

version = '1.0'
base.archivesName = "modid"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = "21.5.6-beta"

    runs {
        client {
            client()

            def mcreatorJvmOptions = System.getenv('MCREATOR_JVM_OPTIONS')
            if (mcreatorJvmOptions) {
                mcreatorJvmOptions.split("\\s+").findAll { it.trim() }.each { arg ->
                    jvmArgument(arg)
                }
            }
        }
        server {
            server()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        mcreator {
            sourceSet sourceSets.main
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

apply from: 'mcreator.gradle'
